# drprg

./: .dockerignore  .gitignore  .rustfmt.toml  404.html  CHANGELOG.md  CITATION.cff  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  contributing.html  index.html  installation.html  justfile  print.html  quick-usage.html  searchindex.js  searchindex.json
.github/workflows/: coverage.yml  deploy.yml  gh-pages.yml  release.yml  rust.yml
docs/: book.toml
docs/src/: SUMMARY.md  contributing.md  installation.md  quick-usage.md
docs/src/guide/: download.md  predict-output.md  predict.md
guide/: download.html  predict-output.html  predict.html
install/: install.sh
paper/: README.md  environment.yaml  lsf.yaml
paper/config/: config.yaml  h2h.phenotypes.csv  h2h.samplesheet.csv  illumina.sample  illumina.samplesheet.csv  nanopore.samplesheet.csv
paper/config/samplesheets/: PRJNA343956-accessions.tsv  PRJNA343956-phenotypes.csv  PRJNA343956.csv  PRJNA353873_antibiogram_data_tsv.txt  PRJNA413593_antibiogram_data_tsv.txt  PRJNA438921_antibiogram_data_tsv.txt  PRJNA557083_antibiogram_data_tsv.txt  PRJNA650381_antibiogram_data_tsv.txt  PRJNA663350_antibiogram_data_tsv.txt  PRJNA717333_antibiogram_data_tsv.txt  PRJNA824124_antibiogram_data_tsv.txt  PRJNA834625_antibiogram_data_tsv.txt  PRJNA888434_antibiogram_data_tsv.txt  PRJNA903660-illumina.csv  PRJNA903660-nanopore.csv  PRJNA903660-phenotypes.csv  PRJNA903660-runinfo.csv  antibiogram_accessions.csv  antibiogram_biosample_result.txt  correspondence.csv  finci2022.csv  gentb.csv  h2h_ont.csv  leah_bdq.csv  lempens-accessions.tsv  lempens-phenotypes.csv  lempens.csv  merker.csv  merker2022.csv  peker_PRJNA720906.tsv  peker_pheno.csv  smith-NY.csv  smith_PRJNA650381.tsv  smith_ont.csv  trisakul.csv  who.csv
paper/resources/: NC_000962.3.gff3  cryptic.samples.txt  cryptic.to_keep.samples.txt  expert_rules.csv  mutations_in_genes_of_interest.csv  popn.samples.txt  rules.csv  target.mutations.tsv  who-catalogue-grade1-2.tsv
paper/workflow/: Snakefile
paper/workflow/envs/: aln_tools.yaml  compare_sn_and_sp.yaml  (+12 more)
scripts/: create_orphan_mutations.py  extract_panel_genes_from_vcf.py
src/: builder.rs  cli.rs  config.rs  consequence.rs  expert.rs  filter.rs  index.rs  interval.rs  lib.rs  main.rs  minor.rs  panel.rs  predict.rs  report.rs
src/panel/: panel.rs
src/predict/: mod.rs
tests/: main.rs
tests/cases/: ann.gff3  panel.tsv
(+78 files in other folders)
