[package]
name = "drprg"
version = "0.1.0"
authors = ["Michael Hall <michael@mbh.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
log = "0.4"
env_logger = "0.8"
thiserror = "1.0"
anyhow = "1.0"
bio = "0.33"
serde = "1"
serde_derive = "1"
csv = "1.1"
rust-htslib = "0.36"
regex = "1"
lazy_static = "1.4"
bstr = "0.2"
rayon = "1.5"
tempfile = "3"
float-cmp = "0.8"

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1.0.8"
mockall = "0.9"
