[package]
name = "drprg"
version = "0.1.0"
authors = ["Michael Hall <michael@mbh.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
thiserror = "1.0.31"
anyhow = "1.0.58"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.82"
csv = "1.1.6"
rust-htslib = "0.39.5"
regex = "1.5.6"
lazy_static = "1.4.0"
bstr = "0.2.17"
rayon = "1.5.3"
tempfile = "3.3.0"
float-cmp = "0.9.0"
uuid = { version = "1.1.2", features = ["v4"] }
strum = "0.24.1"
strum_macros = "0.24.2"
fs_extra = "1.2.0"
clap = { version = "3.2.7", features = ["derive"] }
noodles = { version = "0.24.0", features = ["fasta", "gff", "core"] }
toml = "0.5"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
